--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,10 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.6;
+    background-color: #f5f5f5; /* Fondo claro */
+    color: #333; /* Texto oscuro */
 }
 
 header {
@@ -163,4 +165,24 @@ table th {
     .grid-container {
         grid-template-columns: repeat(3, 1fr);
     }
+}
+
+
+button {
+    background: linear-gradient(45deg, #f1c40f, #e67e22);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+button:hover {
+    background: linear-gradient(45deg, #f1c40f, #e67e22);
+}
+
+a {
+    color: #3498db; /* Azul para enlaces */
 }
